sfdx-source/trouble/objects/SeededRecord__c/SeededRecord__c.object-meta.xml
<CustomObject>
    <label>SeededRecord</label>
    <nameField>
        <label>DataSeeding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SeededRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>