sfdx-source/trouble/objects/SeededRecord__c/fields/date1__c.field-meta.xml
<CustomField>
    <fullName>date1__c</fullName>
    <label>date1</label>
    <type>Date</type>
</CustomField>