sfdx-source/trouble/objects/SeededRecord__c/fields/datetime1__c.field-meta.xml
<CustomField>
    <fullName>datetime1__c</fullName>
    <label>datetime1</label>
    <type>DateTime</type>
</CustomField>