sfdx-source/trouble/objects/SeededRecord__c/fields/dependentpicklist1__c.field-meta.xml
<CustomField>
    <fullName>dependentpicklist1__c</fullName>
    <label>dependentpicklist1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sierra</fullName>
            </value>
            <value>
                <fullName>tango</fullName>
            </value>
            <value>
                <fullName>victor</fullName>
            </value>
            <value>
                <fullName>uniform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>