sfdx-source/trouble/objects/SeededRecord__c/fields/email1__c.field-meta.xml
<CustomField>
    <fullName>email1__c</fullName>
    <label>email1</label>
    <type>Email</type>
</CustomField>