sfdx-source/trouble/objects/SeededRecord__c/fields/formula1__c.field-meta.xml
<CustomField>
    <fullName>formula1__c</fullName>
    <formula>formulafield1__c &amp; &quot;,&quot; &amp; formulafield2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula1</label>
    <type>Text</type>
</CustomField>