sfdx-source/trouble/objects/SeededRecord__c/fields/formulafield1__c.field-meta.xml
<CustomField>
    <fullName>formulafield1__c</fullName>
    <label>formulafield1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>