sfdx-source/trouble/objects/SeededRecord__c/fields/formulafield2__c.field-meta.xml
<CustomField>
    <fullName>formulafield2__c</fullName>
    <label>formulafield2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>