sfdx-source/trouble/objects/SeededRecord__c/fields/geolocation1__c.field-meta.xml
<CustomField>
    <fullName>geolocation1__c</fullName>
    <label>geolocation1</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>