sfdx-source/trouble/objects/SeededRecord__c/fields/number1__c.field-meta.xml
<CustomField>
    <fullName>number1__c</fullName>
    <label>number1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>