sfdx-source/trouble/objects/SeededRecord__c/fields/percent1__c.field-meta.xml
<CustomField>
    <fullName>percent1__c</fullName>
    <label>percent1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>