sfdx-source/trouble/objects/SeededRecord__c/fields/phone1__c.field-meta.xml
<CustomField>
    <fullName>phone1__c</fullName>
    <label>phone1</label>
    <type>Phone</type>
</CustomField>