sfdx-source/trouble/objects/SeededRecord__c/fields/picklist1__c.field-meta.xml
<CustomField>
    <fullName>picklist1__c</fullName>
    <label>picklist1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>alpha</fullName>
            </value>
            <value>
                <fullName>charlie</fullName>
            </value>
            <value>
                <fullName>delta</fullName>
            </value>
            <value>
                <fullName>echo</fullName>
            </value>
            <value>
                <fullName>foxtrot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>