sfdx-source/trouble/objects/SeededRecord__c/fields/PreviousSeededRecord__c.field-meta.xml
<CustomField>
    <fullName>PreviousSeededRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PreviousSeededRecord</label>
    <referenceTo>SeededRecord__c</referenceTo>
    <relationshipLabel>SeededRecords</relationshipLabel>
    <relationshipName>SeededRecords</relationshipName>
    <type>Lookup</type>
</CustomField>