sfdx-source/trouble/objects/SeededRecord__c/fields/text1__c.field-meta.xml
<CustomField>
    <fullName>text1__c</fullName>
    <label>text1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>