sfdx-source/trouble/objects/SeededRecord__c/fields/textarea1__c.field-meta.xml
<CustomField>
    <fullName>textarea1__c</fullName>
    <label>textarea1</label>
    <type>TextArea</type>
</CustomField>