sfdx-source/trouble/objects/SeededRecord__c/fields/textarealong1__c.field-meta.xml
<CustomField>
    <fullName>textarealong1__c</fullName>
    <label>textarealong1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>