sfdx-source/trouble/objects/SeededRecord__c/fields/textarearich1__c.field-meta.xml
<CustomField>
    <fullName>textarearich1__c</fullName>
    <label>textarearich1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>