sfdx-source/trouble/objects/SeededRecord__c/fields/textencrypted1__c.field-meta.xml
<CustomField>
    <fullName>textencrypted1__c</fullName>
    <label>textencrypted1</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>