sfdx-source/trouble/objects/SeededRecord__c/fields/time1__c.field-meta.xml
<CustomField>
    <fullName>time1__c</fullName>
    <label>time1</label>
    <type>Time</type>
</CustomField>