sfdx-source/trouble/objects/SeededRecord__c/fields/url1__c.field-meta.xml
<CustomField>
    <fullName>url1__c</fullName>
    <label>url1</label>
    <type>Url</type>
</CustomField>