sfdx-source/trouble/objects/SeededRecord__c/recordTypes/recordtype1.recordType-meta.xml
<RecordType>
    <fullName>recordtype1</fullName>
    <active>true</active>
    <label>recordtype1</label>
</RecordType>