sfdx-source/trouble/objects/SeededRecord__c/recordTypes/recordtype2.recordType-meta.xml
<RecordType>
    <fullName>recordtype2</fullName>
    <active>true</active>
    <label>recordtype2</label>
</RecordType>